Revisado sonarqube issues ObjetoAPIService